[gd_scene load_steps=4 format=3 uid="uid://ci6q5pl0gsqc0"]

[ext_resource type="Script" path="res://Game/Objects/Menus/About/about_menu.gd" id="1_du3pg"]
[ext_resource type="Theme" uid="uid://b4c020jafg5tt" path="res://Game/Objects/Menus/UI_Theme.tres" id="2_ydsl2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a5vb1"]
bg_color = Color(0.215686, 0.215686, 0.215686, 0.631373)
border_width_left = 4
border_width_right = 4
border_color = Color(0.603922, 0, 0.156863, 1)

[node name="About_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_du3pg")

[node name="Task_bar" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 40.0
offset_bottom = 80.0
grow_horizontal = 2
theme = ExtResource("2_ydsl2")
theme_override_styles/panel = SubResource("StyleBoxFlat_a5vb1")

[node name="MarginContainer" type="MarginContainer" parent="Task_bar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_ydsl2")

[node name="MenuOptions" type="HBoxContainer" parent="Task_bar/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_ydsl2")
theme_override_constants/separation = 96
alignment = 1

[node name="Back" type="Button" parent="Task_bar/MarginContainer/MenuOptions"]
layout_mode = 2
theme = ExtResource("2_ydsl2")
text = "BACK"
flat = true

[node name="Version" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -109.0
offset_top = -18.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("2_ydsl2")
theme_override_font_sizes/font_size = 14
text = "VERSION : 0.1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Select_map" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -225.0
offset_right = 350.0
offset_bottom = 225.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_ydsl2")
theme_override_styles/panel = SubResource("StyleBoxFlat_a5vb1")

[node name="load_map" type="Button" parent="Select_map"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -51.0
offset_top = -33.0
offset_right = 51.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_ydsl2")
text = "Load map"
flat = true

[node name="OptionButton" type="OptionButton" parent="Select_map"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -107.5
offset_top = -16.5
offset_right = 107.5
offset_bottom = 16.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1
item_count = 2
selected = 0
popup/item_0/text = "None"
popup/item_0/id = 0
popup/item_1/text = "Light-house_map"
popup/item_1/id = 1

[connection signal="pressed" from="Task_bar/MarginContainer/MenuOptions/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Select_map/load_map" to="." method="_on_load_map_pressed"]
[connection signal="item_selected" from="Select_map/OptionButton" to="." method="_on_option_button_item_selected"]
